# beaglebone-oiu

./: BeagleboneSetup.md  CMakeLists.txt  README.md  Toolchain-arm-linux-gnueabihf.cmake
beaglebone2pic/: CASU_Interface.cpp  CASU_Interface.h  CMakeLists.txt  mainApp.cpp
config/: rc.local.template  template.fbc
config/bbg-001/: casu-001.fbc  casu-002.fbc  casu-003.fbc  casu-004.fbc
config/bbg-002/: casu-001.fbc  casu-002.fbc  casu-003.fbc  casu-004.fbc
config/bbg-003/: casu-001.fbc  casu-002.fbc  casu-003.fbc  casu-004.fbc
config/bbg-004/: casu-001.fbc  casu-002.fbc  casu-003.fbc  casu-004.fbc
config/bbg-005/: casu-001.fbc  casu-002.fbc  casu-003.fbc  casu-004.fbc
config/bbg-006/: casu-001.fbc  casu-002.fbc  casu-003.fbc  casu-004.fbc
config/bbg-007/: casu-001.fbc  casu-002.fbc  casu-003.fbc  casu-004.fbc
config/bbg-008/: casu-001.fbc  casu-002.fbc  casu-003.fbc  casu-004.fbc
config/bbg-009/: casu-001.fbc  casu-002.fbc  casu-003.fbc  casu-004.fbc
config/bbg-010/: casu-001.fbc  casu-002.fbc  casu-003.fbc  casu-004.fbc
config/bbg-011/: casu-001.fbc  casu-002.fbc  casu-003.fbc  casu-004.fbc
config/bbg-012/: casu-001.fbc  casu-002.fbc  casu-003.fbc  casu-004.fbc
config/bbg-013/: casu-001.fbc  casu-002.fbc  casu-003.fbc  casu-004.fbc
config/bbg-014/: casu-001.fbc  casu-002.fbc  casu-003.fbc  casu-004.fbc
config/bbg-015/: casu-001.fbc  casu-002.fbc  casu-003.fbc  casu-004.fbc
config/bbg-016/: casu-001.fbc  casu-002.fbc  casu-003.fbc  casu-004.fbc
config/bbg-017/: casu-001.fbc  casu-003.fbc  casu-004.fbc
config/bbg-018/: casu-001.fbc  casu-003.fbc  casu-004.fbc
ehm/: ehm.cpp  ehm.h
fuzzy/: cfg.fzy  cfgfile-corrected.py  cfgfile.py  config_exampleA.fzy  config_exampleB.fzy  fuzzyController.cpp  fuzzyController.h  fuzzyOutput.cpp  fuzzyOutput.h  main.cpp  main.h  variable.cpp  variable.h
i2c/: i2cDevice.cpp  i2cDevice.h  i2cSlaveMCU.cpp  i2cSlaveMCU.h
msg/: dev_msgs.proto
serial/: serial.cpp  serial.h
